# python-virtual-office

./: README.md  pyproject.toml
virtual_office/: __main__.py
