[tool.poetry]
name = "virtual_office"
version = "0.1.0"
description = ""
authors = ["HAMANO Tsukasa"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.2.0"
v4l2 = { git = "https://github.com/aspotton/python3-v4l2.git", branch = "master" }
click = "^7.1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
main = "virtual_office.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

